<resources>
    <string name="app_name">ScreenCastDemo</string>
    <string name="title_test">Test</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_screen_cast">Screen Cast</string>
    <string name="local_ip">IP: %1$s Screen: (%2$s, %3$s)</string>
    <string name="network_error">Network Error!</string>
    <string name="slaves">Found Devices:</string>
    <string name="log">Log:</string>
    <string name="clear_log">Clear log</string>
    <string name="start_control">Start cast</string>
    <string name="stop_control">Stop</string>
    <string name="no_screen_cast">No Screen Cast</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
</resources>